<!-- Uses a Cardview with elevation to elevate each item in the RecycleView -->
<!-- The elevation defines how much the card should stand out -->
<!-- The Corder radius defines how much each corner in the card should be rounded -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Row 1: Layout for Name, Edit button and Deletebutton -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/friend_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit"
                app:srcCompat="@drawable/edit_24"
                 />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                app:srcCompat="@drawable/delete_24"

                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Row 2: Linear layout for Phone and Birthday -->
        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_prefix"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/birthdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_prefix"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
